# CourseWork

./: CMakeLists.txt
db/: data_base.cpp
demo/: main.cpp
include/: auth_database.hpp  auth_window.hpp  booking_window.hpp  data_base.hpp  main_window.hpp  main_window_interface.hpp  reg_customers_window.hpp
sources/: auth_database.cpp  auth_window.cpp  booking_window.cpp  data_base.cpp  main_window.cpp  main_window_interface.cpp  reg_customers_window.cpp
temp/: booking_window.hpp  booking_window.ui  reg_customers_window.hpp  reg_customers_window.ui
ui/: auth_window.ui  main_window.ui  main_window_interface.ui  reg_customers_window.ui
